--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -16,20 +16,20 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="8396461461738434341">"Nástroje SIM"</string>
-    <string name="menu_end_session" msgid="7368541737750982217">"Ukončiť reláciu"</string>
-    <string name="help" msgid="9209980881219397319">"Pomocník"</string>
-    <string name="menu_back" msgid="301227740977453364">"Späť"</string>
-    <string name="service_name" msgid="6860303747999592491">"Názov služby"</string>
-    <string name="stk_no_service" msgid="5427773116839809131">"Žiadna služba nie je k dispozícii"</string>
-    <string name="button_ok" msgid="5760722312558549555">"OK"</string>
-    <string name="button_cancel" msgid="1997847915560800261">"Zrušiť"</string>
-    <string name="button_yes" msgid="624420260648337203">"Áno"</string>
-    <string name="button_no" msgid="1824959157582605627">"Nie"</string>
-    <string name="alphabet" msgid="1583185545938805861">"Abecedy"</string>
-    <string name="digits" msgid="1746796679021682388">"Číslice (0-9, *, #, +)"</string>
-    <string name="default_call_setup_msg" msgid="7960194995759849940">"Prebieha hovor..."</string>
-    <string name="stk_app_state" msgid="18582277302584082">"Stav aplikácie"</string>
-    <string name="enable_app" msgid="3701224550936728203">"Povolené"</string>
-    <string name="disable_app" msgid="6725081975611415214">"Zakázané"</string>
+    <string name="app_name">"Nástroje SIM"</string>
+    <string name="menu_end_session">"Ukončiť reláciu"</string>
+    <string name="help">"Pomocník"</string>
+    <string name="menu_back">"Späť"</string>
+    <string name="service_name">"Názov služby"</string>
+    <string name="stk_no_service">"Žiadna služba nie je k dispozícii"</string>
+    <string name="button_ok">"OK"</string>
+    <string name="button_cancel">"Zrušiť"</string>
+    <string name="button_yes">"Áno"</string>
+    <string name="button_no">"Nie"</string>
+    <string name="alphabet">"Abecedy"</string>
+    <string name="digits">"Číslice (0-9, *, #, +)"</string>
+    <string name="default_call_setup_msg">"Prebieha hovor..."</string>
+    <string name="stk_app_state">"Stav aplikácie"</string>
+    <string name="enable_app">"Povolené"</string>
+    <string name="disable_app">"Zakázané"</string>
 </resources>
