--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,9 +18,9 @@
     <!-- Default Application label used on home screen with an icon -->
     <string name="app_name">SIM Toolkit</string>
     <!-- Application label used on home screen with an icon2 -->
-    <string name="app_name2">SIM Toolkit2</string>
+    <string name="app_name2">SIM Toolkit (SIM2)</string>
     <!-- Application label used on home screen with an icon3 -->
-    <string name="app_name3">SIM Toolkit3</string>
+    <string name="app_name3">SIM Toolkit (SIM3)</string>
     <!-- Menu button option for ending current SIM session -->
     <string name="menu_end_session">End session</string>
     <!-- Menu button option for requesting additional help information -->
