--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -17,6 +17,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="8396461461738434341">"Zestaw narzędzi SIM"</string>
+    <string name="app_name2">Drugi zestaw narzędzi SIM</string>
+    <string name="app_name3">Trzeci zestaw narzędzi SIM</string>
     <string name="menu_end_session" msgid="7368541737750982217">"Zakończ sesję"</string>
     <string name="help" msgid="9209980881219397319">"Pomoc"</string>
     <string name="menu_back" msgid="301227740977453364">"Wstecz"</string>
