--- a/res/values-sq-rAL/strings.xml
+++ b/res/values-sq-rAL/strings.xml
@@ -22,7 +22,7 @@
     <string name="menu_back" msgid="301227740977453364">"Prapa"</string>
     <string name="service_name" msgid="6860303747999592491">"Emri i shërbimit"</string>
     <string name="stk_no_service" msgid="5427773116839809131">"Nuk ofrohet asnjë shërbim"</string>
-    <string name="button_ok" msgid="5760722312558549555">"Në rregull!"</string>
+    <string name="button_ok" msgid="5760722312558549555">"Në rregull"</string>
     <string name="button_cancel" msgid="1997847915560800261">"Anulo"</string>
     <string name="button_yes" msgid="624420260648337203">"Po"</string>
     <string name="button_no" msgid="1824959157582605627">"Jo"</string>
